<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_drawer">
    <group
        android:id="@+id/nav_user_group">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_personicle"
            android:title="@string/personicle" />
        <item
            android:id="@+id/nav_healthplan"
            android:title="@string/healthplan" />
    </group>
    <group
        android:id="@+id/nav_data_group">
        <item
            android:id="@+id/nav_diet"
            android:title="@string/diet"/>
        <item
            android:id="@+id/nav_activity"
            android:title="@string/exercise"/>
        <item
            android:id="@+id/nav_relaxation"
            android:title="@string/relaxation"/>
        <item
            android:id="@+id/nav_sleep"
            android:title="@string/sleep"/>
    </group>
    <group
        android:id="@+id/nav_privacy_group">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>
    </group>
</menu>